# veloq

./: .detoxrc.js  .eslintrc.js  .gitignore  .gitmodules  .watchmanconfig  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  Veloq.podspec  app.config.js  app.json  babel.config.js  eas.json  jest.config.js  jest.setup.js  justfile  maestro-android-retest.xml  maestro-ios-retest.xml  package-lock.json  package.json  react-native.config.js  tsconfig.json  ubrn.config.yaml
.github/: ci-init.gradle  dependabot.yml
.husky/: pre-commit  pre-push
.maestro/: README.md  about-links.yaml  activity-card-stats.yaml  activity-chart-types.yaml  activity-charts.yaml  activity-detail-scroll.yaml  activity-detail-sections-inline.yaml  activity-gpx-export-validation.yaml  activity-gpx-export.yaml  activity-map-fullscreen-pr.yaml  activity-map-interactions.yaml  activity-map-long-press-highlight.yaml  activity-section-matches.yaml  activity-sections-scrub.yaml  activity-zone-distributions.yaml  auth-api-key-validation.yaml  auth-demo-mode.yaml  auth-token-refresh.yaml  backup-local-now.yaml  config.yaml  critical-path.yaml  dark-mode-contrast.yaml  data-values-activity.yaml  data-values-fitness.yaml  data-values-weekly-summary.yaml  data-verification.yaml  error-invalid-activity.yaml  feed-card-indicators.yaml  feed-chip-deep-link.yaml  feed-pr-count.yaml  fitness-collapsible-sections.yaml  fitness-curves-zones.yaml  fitness-metrics.yaml  fitness-scroll.yaml  fitness-sport-filter.yaml  fitness-time-range.yaml  fitness-wellness-trends.yaml  home-scroll.yaml  home-search.yaml  home-summary-card-features.yaml  (+74 more)
__mocks__/: theme.js
app/: _layout.tsx  about.tsx  fitness.tsx  heatmap.tsx  index.tsx  login.tsx  map.tsx  routes.tsx  settings.tsx  stats.tsx  training.tsx  wellness.tsx
config/: .prettierignore  StoreKitConfiguration.storekit  eas.json  eslint.config.js  jest.config.js  jest.setup.js
cpp/: veloq.cpp
docs/: CNAME  README.md  index.html  intervals-api-reference.md  maplibre-v11-migration-plan.md  openapi.json  user-stories.csv
e2e/: auth.test.ts  feed.test.ts  jest.config.js  settings.test.ts  testIDs.ts
fastlane/: Fastfile  Matchfile
modules/veloqrs/rust/veloqrs/: Cargo.toml
modules/veloqrs/rust/veloqrs/benches/: heatmap_tiles.rs
modules/veloqrs/rust/veloqrs/src/: coords.rs  ffi.rs  ffi_sections.rs  ffi_types.rs  fit.rs  governor.rs  http.rs  lib.rs  migrations.rs  patterns.rs  persistence.rs  runtime.rs  sections.rs  tiles.rs  types.rs
modules/veloqrs/rust/veloqrs/src/migrations/: 001_initial_schema.sql  002_unified_sections.sql  003_drop_section_names.sql  004_extend_activity_metrics.sql  005_profile_and_settings.sql  006_processed_activities.sql  007_cache_section_performances.sql  008_cache_all_performance_metrics.sql  009_section_bounds_cache.sql  010_route_groups_activity_count.sql  011_pace_history.sql  012_section_original_polyline.sql  012_v030.sql  013_redetect_section_portions.sql  013_section_polyline_blob.sql  014_redetect_cross_sport_fix.sql  015_section_activity_excluded.sql  016_route_activity_excluded.sql  017_section_activity_avg_hr.sql  018_exercise_sets.sql  019_reset_fit_cache.sql  020_section_visibility.sql  021_settings_table.sql  022_activity_indicators.sql  023_wellness.sql  024_perf_indexes.sql  025_consensus_state.sql
modules/veloqrs/rust/veloqrs/src/net/: endpoints.rs  mod.rs  transport.rs  types.rs
modules/veloqrs/rust/veloqrs/src/objects/: activities.rs  detection.rs  engine.rs  error.rs  fitness.rs  maps.rs  mod.rs  routes.rs  sections.rs  settings.rs  strength.rs  sync.rs  tiles.rs
modules/veloqrs/rust/veloqrs/src/persistence/: activities.rs  codec.rs  export.rs  fitness.rs  indicators.rs  mod.rs  routes.rs  schema.rs  sections.rs  settings.rs  strength.rs  tiles.rs  wellness.rs
modules/veloqrs/rust/veloqrs/src/persistence/fitness/: derivations.rs  mod.rs  performances.rs
modules/veloqrs/rust/veloqrs/src/persistence/sections/: detection.rs  merging.rs  mod.rs  naming.rs  ranking.rs
modules/veloqrs/rust/veloqrs/src/sections/: crud.rs  ffi.rs  mod.rs
modules/veloqrs/rust/veloqrs/src/sections/crud/: editing.rs  mod.rs  mutations.rs  queries.rs
modules/veloqrs/rust/veloqrs/tests/: accumulator_backfill.rs  apply_sections_atomicity.rs  clone_preserves_lap_time.rs  consensus_persistence.rs  detection_audit.rs  detection_audit_synthetic.rs  encounters.rs  engine_init_failover.rs  heatmap_idempotent.rs  heatmap_parity.rs  heatmap_tile_set.rs  index_new_activity.rs  indicators.rs  io_safety_net.rs  lifecycle_scenarios.rs  lock_contention.rs  match_percentage_persistence.rs  match_strictness_persistence.rs  merge_sections.rs  migration_fresh_install.rs  migration_schema_parity.rs  migration_v02x_to_current.rs  persistence_stress.rs  schema_indexes.rs  section_config_persistence.rs  section_portions_roundtrip.rs  set_route_representative.rs  strength_fit_parser.rs
modules/veloqrs/rust/veloqrs/tests/fixtures/: heatmap_parity_v1.txt  heatmap_tile_set_A_v1.txt  heatmap_tile_set_E_v1.txt
oauth-proxy/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
patches/: expo-modules-core+3.0.29.patch
plugins/: package.json  with-gradle-repositories.js  with-packaging-options.js  with-route-matcher-native.js  withGradleProperties.js  withGradleProperties.ts
rust/route-matcher/: Cargo.toml  README.md
rust/route-matcher/examples/: basic_matching.rs  batch_grouping.rs  http_benchmark.rs
rust/route-matcher/scripts/: build-android-dev.sh  build-android.sh  build-ios.sh  install-android.sh  install-ios.sh
rust/route-matcher/src/: achievements.rs  algorithms.rs  curves.rs  engine.rs  error.rs  ffi.rs  geo_utils.rs  grouping.rs  heatmap.rs  http.rs  lib.rs  lru_cache.rs  matching.rs  persistence.rs  sections.rs  union_find.rs  zones.rs
rust/route-matcher/src/sections/: consensus.rs  medoid.rs  mod.rs  overlap.rs  portions.rs  postprocess.rs  rtree.rs  traces.rs
scripts/: build-tracematch-local.sh  build-tracematch.sh  build-veloqrs.sh  capture-all-screenshots.sh  capture-hierarchy.sh  (+26 more)
(+2064 files in other folders)
