[package]
name = "route-matcher"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High-performance GPS route matching and activity fetching"
repository = "https://github.com/ejthomas/route-matcher"
keywords = ["gps", "route", "matching", "intervals", "geospatial"]
categories = ["algorithms", "science::geo"]

[lib]
name = "route_matcher"
# Include all crate types - rlib for Rust, staticlib for iOS, cdylib for Android
# FFI exports are only compiled when "ffi" feature is enabled
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []
# Enable FFI bindings for mobile (iOS/Android)
# Includes parallel for section detection performance
ffi = ["uniffi", "parallel"]
# Enable parallel processing (recommended for batch operations)
parallel = ["rayon"]
# Enable HTTP client for activity fetching
http = ["reqwest", "tokio", "futures", "base64"]
# Enable SQLite persistence for engine state
persistence = ["rusqlite", "rmp-serde"]
# Enable all features
full = ["ffi", "parallel", "http", "persistence"]

[dependencies]
# Geospatial algorithms
geo = "0.29"
rstar = "0.12"

# Logging
log = "0.4"

# Serialization (always needed for engine JSON output)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Lazy initialization for singleton
once_cell = "1.19"

# SQLite persistence (optional, for engine state persistence)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
rmp-serde = { version = "1.1", optional = true }

# Parallel processing (optional)
rayon = { version = "1.10", optional = true }

# Mobile FFI bindings (optional)
uniffi = { version = "0.29", features = ["cli"], optional = true }

# HTTP client for activity fetching (optional)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
futures = { version = "0.3", optional = true }
base64 = { version = "0.21", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"], optional = true }

# Profile for smaller binary size (used when building for mobile)
[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
# Don't strip - needed for UniFFI metadata
strip = false

[profile.release-mobile]
inherits = "release"
panic = "abort"

[[example]]
name = "basic_matching"
path = "examples/basic_matching.rs"

[[example]]
name = "batch_grouping"
path = "examples/batch_grouping.rs"
required-features = ["parallel"]

[[example]]
name = "http_benchmark"
path = "examples/http_benchmark.rs"
required-features = ["http"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["ffi"]
