[package]
name = "veloqrs"
version = "0.0.10"
edition = "2024"
authors = ["Evan Thomas <evan@evanjt.com>"]
license = "Apache-2.0"
publish = false

[lib]
name = "veloqrs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
# Core algorithm library
tracematch = { path = "../tracematch" }

# FFI bindings
uniffi = { version = "0.29", features = ["cli"] }

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }
rmp-serde = "1.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
base64 = "0.22"

# Common
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
lru = "0.12"
rayon = "1.10"
rstar = "0.12"
geo = "0.29"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = false

[profile.release-mobile]
inherits = "release"
panic = "abort"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
