[package]
name = "veloqrs"
version = "0.0.10"
edition = "2024"
authors = ["Evan Thomas <evan@evanjt.com>"]
license = "Apache-2.0"
publish = false

[lib]
name = "veloqrs"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []
synthetic = ["tracematch/synthetic"]

[dependencies]
# Core algorithm library
tracematch = { path = "../tracematch" }

# FFI bindings
uniffi = { version = "0.29", features = ["cli"] }

# Persistence
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
rusqlite_migration = "1.2"
rmp-serde = "1.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
base64 = "0.22"

# Error handling
thiserror = "2"

# FIT file parsing
fitparser = "0.10"

# Common
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
once_cell = "1.19"
lru = "0.16"
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["png"] }
rstar = "0.12"
geo = "0.29"
polyline = "0.11"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = false

[profile.release-mobile]
inherits = "release"
panic = "abort"

[dev-dependencies]
tempfile = "3.10"

[[test]]
name = "persistence_stress"
required-features = ["synthetic"]

[[test]]
name = "lifecycle_scenarios"
required-features = ["synthetic"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
